# http-server-starter-rust

./: .gitignore  .watch.yaml  Cargo.toml  README.md  justfile
src/: errors.rs  http_request.rs  http_response.rs  lib.rs  main.rs  parse_url.rs  router.rs  url_path.rs
src/http/: mod.rs  parser.rs  request.rs  response.rs  uri_path.rs
src/response_handler/: echo.rs  get_file.rs  mod.rs  path_default.rs  path_not_found.rs  post_file.rs  user_agent.rs
tests/: get.rs  http.rs  http_get.rs  post.rs
tests/data/: index.html
tests/get/: command_echo.rs  command_files.rs  command_user_agent.rs  path_not_exist.rs  path_not_found.rs
tests/post/: command_files.rs  path_not_exist.rs  path_not_found.rs
