# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.86"                                   # error handling
bytes = "1.6.0"                                     # helps manage buffers
thiserror = "1.0.61"                                # error handling
tokio = { version = "1.38.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.13.0"                                # General iterator helpers
flate2 = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.4.0"                         # nicer looking assertions
reqwest = "0.12.5"
